<resources>
    <string name="app_name">Krist Wallet</string>
    <string name="krist">Krist</string>

    <string name="placeholder">%1$s</string>

    <string name="action_settings">Settings</string>
    <string name="show">Show</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="account_select">Select an account</string>
    <string name="wallet_password">Wallet Password</string>
    <string name="label">Label</string>
    <string name="wallet_creation_hint">A new wallet will be created if you don\'t have one</string>
    <string name="confirm_account_delete">Delete this account?</string>

    <string name="overview">Overview</string>
    <string name="transactions">Transactions</string>
    <string name="sendCurrency">Send Currency</string>

    <string name="balance">%1$s %2$s</string>
    <string name="balance_hint">Balance</string>
    <string name="addressHint">Your account</string>
    <string name="viewTransactions">View Transactions</string>

    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="mined">Mined</string>

    <string name="transactionTo">%1$s %3$s to %2$s</string>
    <string name="transactionFrom">%1$s %3$s from %2$s</string>

    <string name="kristImage">kristImage</string>

    <string name="apiError">There was an error loading the API. Please try again later.</string>
    <string name="balanceError">Error acquiring balance</string>
    <string name="load_more">Load more</string>
    <string name="loading">Loading...</string>
    <string name="try_again_later">Try again later!</string>
    <string name="loading_error_text">It seems there was a problem loading your wallet. Perhaps your internet connection is poor or disconnected, or the node is down.</string>
    <string name="masterPasswordHint">Enter your master password to access your wallet book</string>
    <string name="masterPasswordCreate">Create a master password to encrypt your wallet book</string>
    <string name="enter">Enter</string>
    <string name="passwordFailure">Incorrect password</string>
    <string name="unknownError">Unknown error</string>

    <string name="settings">Settings</string>
    <string name="settingsWallets">Wallets</string>
    <string name="settingsErrorReporting">Error Reporting and Privacy</string>

    <string name="walletReset">Reset wallets</string>
    <string name="walletSummary">Empties your current address book and removes its password.</string>
    <string name="walletResetDialog">Are you sure you want to reset your wallets? This cannot be undone.</string>

    <string name="acraEnable">Enable error reporting</string>
    <string name="acraDisabled">Error reporting disabled</string>
    <string name="acraEnabled">Error reporting enabled</string>
    <string name="acraLogEnable">Enable system log sending along with error reports</string>
    <string name="acraLogDisabled">System logs will not be sent</string>
    <string name="acraLogEnabled">System logs will be sent</string>
    <string name="acraDialog">Krist Wallet has crashed. Please help us fix this by sending an error report.</string>

    <string name="nodeInfo">%1$s at %2$s</string>
    <string name="nodes">Nodes</string>
    <string name="nodeError">Failed to get nodes</string>

    <string name="accountTypeLogin">Login</string>
    <string name="accountTypeQR">QR</string>
    <string name="accountTypeNFC">NFC</string>

    <string name="comingSoon">Coming Soon</string>

    <string name="send">Send</string>
    <string name="amount">Amount</string>
    <string name="recipient">Recipient</string>
    <string name="selectFromAddressBook">Select from Address Book</string>

    <string name="insufficientFunds">Insufficient Funds</string>
    <string name="insufficientFundsDetail">You don\'t have enough %1$s for this transaction</string>
    <string name="invalidRecipient">Invalid Recipient</string>
    <string name="invalidRecipientDetail">Address is invalid or badly formatted</string>
    <string name="badValue">Bad Value</string>
    <string name="badValueDetail">Invalid amount of %1$s</string>
    <string name="selfSend">Self Send</string>
    <string name="selfSendDetail">You can\'t send %1$s to yourself</string>
</resources>
