<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/transactionLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/card_gutter">

    <ImageView
        android:id="@+id/image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/kristImage"
        android:longClickable="false"
        android:scaleType="fitStart"
        android:src="@mipmap/krist_mined" />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@id/image"
        android:layout_toRightOf="@+id/image"
        android:gravity="start"
        android:singleLine="true"
        android:text="@string/mined"
        android:textAlignment="viewStart"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/accent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title"
        android:layout_below="@+id/title"
        android:singleLine="true"
        android:text="@string/balance"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title"
        android:layout_below="@+id/amount"
        android:gravity="start"
        android:singleLine="true"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/lb800"
        android:textSize="14sp" />
</RelativeLayout>