<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/transactionCard"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="@dimen/card_gutter"
    card_view:cardCornerRadius="@dimen/card_radius">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="@dimen/card_gutter">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/image"
            android:contentDescription="@string/kristImage"
            android:src="@mipmap/krist_red"
            android:longClickable="false"
            android:scaleType="fitStart" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/title"
            android:singleLine="true"
            android:textSize="24sp"
            android:textColor="@color/accent"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/image"
            android:layout_toEndOf="@id/image"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/sent"
            android:textAlignment="viewStart"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/transactionTo"
            android:id="@+id/amount"
            android:singleLine="true"
            android:textSize="16sp"
            android:layout_below="@+id/title"
            android:layout_alignLeft="@+id/title"
            android:layout_alignStart="@+id/title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/placeholder"
            android:id="@+id/date"
            android:singleLine="true"
            android:textSize="14sp"
            android:layout_below="@+id/amount"
            android:layout_alignLeft="@+id/title"
            android:layout_alignStart="@+id/title"
            android:textColor="@color/lb800"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>