<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="net.teamdentro.kristwallet.frags.SendCurrency"
    android:padding="@dimen/card_gutter">

    <include
        layout="@layout/card_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/include"
        android:layout_marginBottom="@dimen/card_gutter" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/include"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/sendAmount"
            android:layout_weight="1"
            android:hint="@string/amount" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/sendButton" />
    </LinearLayout>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/sendRecipient"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/recipient" />

</RelativeLayout>