<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/Theme.KristLight">

    <LinearLayout
        android:id="@+id/passwordBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/wallet_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/showPasswordCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:checked="false"
            android:text="@string/show" />
    </LinearLayout>

    <EditText
        android:id="@+id/accountLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/passwordBox"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/label"
        android:maxLength="42"
        android:singleLine="true" />

    <Spinner
        android:id="@+id/nodeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/accountLabel"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nodeSpinner"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/accountLabel"
        android:layout_below="@+id/nodeSpinner"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/wallet_creation_hint" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:gravity="center"
        android:text="@string/v2_address_note"
        android:textAlignment="center"
        android:textStyle="bold" />

</RelativeLayout>